Agent query: Please verify: 1. Can you access the PRAPARE assessment form? 2. Can you select multiple race options in question 2? 3. Are the selected options being saved correctly when you submit the form?

--- a/templates/patients/assessment_form.html
+++ b/templates/patients/assessment_form.html
@@ -97,7 +97,7 @@
                                     {% endif %}
 
                                     {% if question.question_type == 'multiple_choice' %}
-                                        {% if question.order == 2 %}
+                                        {% if question.order == 2 %}  {# Race question #}
                                         <div class="d-flex flex-column gap-2">
                                             {% for option in question.options %}
                                             <div class="form-check">
